--- a/templates/base.html
+++ b/templates/base.html
@@ -19,5 +19,20 @@
 </head>
 
 <body>
+<header>
+  <h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
+  <nav class="navmenu">
+    <li><a href="index.html">About</a></li>
+    <li><a href="index.html">Projects</a></li>
+    <li><a href="index.html">Archive</a></li>
+   </nav>
+ </header>
+<hr />
+{% block content%}
+{% endblock content %}
+<footer>
+  <p>{{ FOOTER_TEXT or 'Powered by <a href="http://pelican.readthedocs.org">Pelican</a>' }}</p>
+  <nav>Older Articles</nav>
+</footer>
 </body>
 </html>
