--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 {% block content_title %}{% endblock %}
+<main class="articlelisting">
 
-<ol id="post-list">
 {% for article in articles_page.object_list %}
-        <li><article class="hentry">
-                <header> <h2 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2> </header>
-                <footer class="post-info">
-                    <abbr class="published" title="{{ article.date.isoformat() }}"> {{ article.locale_date }} </abbr>
-                    <address class="vcard author">By
-                    {% for author in article.authors %}
-                        <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-                    {% endfor %}
-                    </address>
-                </footer><!-- /.post-info -->
-                <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
-        </article></li>
+<article class="post">
+<header class="post-header">
+<h1>
+<a rel="bookmark"
+   href="{{ SITEURL }}/{{ article.url }}"
+   title="{{ article.title|striptags }} «{{ SITENAME }}»">
+   {{ article.title}}
+</a>
+</h1>
+</header>
+{{ article.summary }}	
+</article>
 {% endfor %}
-</ol><!-- /#posts-list -->
-{% if articles_page.has_other_pages() %}
-    {% include 'pagination.html' %}
-{% endif %}
-</section><!-- /#content -->
 
-
+</main>
 {% endblock content %}
