Change the urls for article links in index pages
The links to the individual urls for articles would have the site url
and the article url combined.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <header class="post-header">
 <h1>
 <a rel="bookmark"
-   href="{{ SITEURL }}/{{ article.url }}"
+   href="{{ article.url }}"
    title="{{ article.title|striptags }} «{{ SITENAME }}»">
    {{ article.title}}
 </a>
