Add paragraph to have the subtile show the date
The Tufte example on the web uses a paragraph to contain the date that
the posting was created.

--- a/templates/article.html
+++ b/templates/article.html
@@ -4,7 +4,8 @@
 <article>
 	<header>
 	<h1><a href="{{ article.url }}" rel="bookmark"
-           title="Permalink to {{ article.title|striptags }}">{{ article.title}}</a></h1>
+           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
+    <p class="subtitle">{{ article.date }}</p>
 	</header>
 	{{ article.content }}
 </article>
