--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,9 @@
    {{ article.title}}
 </a>
 </h1>
+<p class="subtitle">{{ article.date }}</p>
 </header>
-{{ article.summary }}	
+{{ article.content }}	
 </article>
 {% endfor %}
 
