Place category information into a margin note
This will allow me to put the information on what kind of post this is.
I’ll move this code to a separate file because I need it on multiple
pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
    {{ article.title}}
 </a>
 </h1>
-<p class="subtitle">{{ article.date }}</p>
+<p class="subtitle">{{ article.date }}<label for="{{ article.slug }}" class="margin-toggle"> ⊕</label><input type="checkbox" id="{{ article.slug }}" class="margin-toggle" /><span class="marginnote">Category: {{ article.category }}</span></p>
 </header>
 {{ article.content }}	
 </article>
