--- a/templates/article.html
+++ b/templates/article.html
@@ -2,11 +2,7 @@
 {% block title %}{{ article.title|striptags }}{% endblock %}
 {% block content %}
 <article>
-	<header>
-	<h1><a href="{{ article.url }}" rel="bookmark"
-           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
-    <p class="subtitle">{{ article.date }}</p>
-	</header>
-	{{ article.content }}
+{% include "article_header.html" %}
+{{ article.content }}
 </article>
 {% endblock content%}
