--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,7 @@
 
 {% for article in articles_page.object_list %}
 <article class="post">
-<header class="post-header">
-<h1>
-<a rel="bookmark"
-   href="{{ article.url }}"
-   title="{{ article.title|striptags }} «{{ SITENAME }}»">
-   {{ article.title}}
-</a>
-</h1>
-<p class="subtitle">{{ article.date }}<label for="{{ article.slug }}" class="margin-toggle"> ⊕</label><input type="checkbox" id="{{ article.slug }}" class="margin-toggle" /><span class="marginnote">Category: {{ article.category }}</span></p>
-</header>
+{% include "article_header.html" %}
 {{ article.content }}	
 </article>
 {% endfor %}
