Update navigation at top of page
Put in link to point to archive and whatever pages that are created.
Options for allowing navigation to categories and tags are not on the
road map

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,11 @@
 <header>
   <h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
   <nav class="navmenu" id="navmenu">
-    <li><a href="index.html">About</a></li>
-    <li><a href="index.html">Projects</a></li>
-    <li><a href="index.html">Archive</a></li>
+    <li><a href="{{ SITEURL }}/archives.html">Archive</a></li>
+    {% if DISPLAY_PAGES_ON_MENU %}
+    {% for p in PAGES %}
+    <li><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
+    {% endfor %}{% endif %}
    </nav>
  </header>
 <hr />
