--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,4 +47,5 @@ article div hr { margin-left: 0;
                 margin-top: 0;
                 margin-bottom: 1rem; }
 
-a.navitemlink { text-decoration: none; }
+a.navitemlink { text-decoration: none;
+                font-variant: small-caps; }
