Reduce the amount of white space around footnotes
The foot notes were really far apart and were taking advantage the
space.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,6 +43,12 @@ hr { margin-left: 0;
 article div hr { margin-left: 0;
      width: 75%; }
 
+article div ol li { margin-top: 0;
+                 margin-bottom: 0; }
+
+article div ol li p { padding: 0;
+                      margin: 0; }
+
 .websitetitle { font-size: 4rem;
                 margin-top: 0;
                 margin-bottom: 1rem; }
