--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,27 @@
 {% block headers %}
   <meta charset="utf-8" />
   <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
+  <meta name="author" content="{{ AUTHOR }}" />
   <base href="{{ SITEURL }}">
   <link rel="stylesheet" type="text/css" href="/theme/tufte-css/tufte.css" />
   <link rel="stylesheet" type="text/css" href="/theme/css/main.css" />
   <link rel="shortcut icon" type="text/css" href="/favicon.ico" />
-  {% if FEED_ATOM %}
+  {% if FEED_ALL_ATOM %}
   <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml"
-        rel="alternate" title="{{ SITENAME }} Atom Feed" />
+        rel="alternate" title="{{ SITENAME }} ALL Atom Feed" />
   {% endif %}
   {% if FEED_RSS %}
   <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" 
         rel="alternate" title="{{ SITENAME }} RSS Feed" />
   {% endif %}
+
+  <!-- OpenGraph Info -->
+  {% block OPEN_GRAPH_INFO %}
+  <meta property="og:title" content="{{ SITENAME }}"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:description" content="{{ SITE_DESCRIPTION }}"/>
+  <meta property="og:url" content="{{ SITEURL }}"/>
+  {% endblock OPEN_GRAPH_INFO %}
 {% endblock headers %}
 </head>
 
