Adding workaround for figures in in P tags
Due to the way pelican parses block plugins, I have to put the figure
in a p tag

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,3 +55,25 @@ article div ol li p { padding: 0;
 
 a.navitemlink { text-decoration: none;
                 font-variant: small-caps; }
+
+
+p > figure { padding: 0;
+         border: 0;
+         font-size: 100%;
+         font: inherit;
+         vertical-align: baseline;
+         max-width: 55%;
+         -webkit-margin-start: 0;
+         -webkit-margin-end: 0;
+         margin: 0 0 3em 0; }
+
+p > figure > figcaption { float: right;
+             clear: right;
+             margin-right: -48%;
+             margin-top: 0;
+             margin-bottom: 0;
+             font-size: 1.1rem;
+             line-height: 1.6;
+             vertical-align: baseline;
+             position: relative;
+             max-width: 40%; }
