--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,14 @@
   <base href="{{ SITEURL }}">
   <link rel="stylesheet" type="text/css" href="/theme/tufte-css/tufte.css" />
   <link rel="stylesheet" type="text/css" href="/theme/css/main.css" />
+  <!--
+  Original link to favicon
   <link rel="shortcut icon" type="text/css" href="/favicon.ico" />
+  -->
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <!-- <link rel="mask-icon" href="/favicon.svg" color="#50c878" /> -->
   {% if FEED_ALL_ATOM %}
   <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml"
         rel="alternate" title="{{ SITENAME }} ALL Atom Feed" />
