--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <!-- <link rel="mask-icon" href="/favicon.svg" color="#50c878" /> -->
+  <link rel="mask-icon" href="/favicon.svg" color="black" />
+
   {% if FEED_ALL_ATOM %}
   <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml"
         rel="alternate" title="{{ SITENAME }} ALL Atom Feed" />
